--- a/htmlbasic/assemblylogin/feedback.html
+++ b/htmlbasic/assemblylogin/feedback.html
@@ -105,7 +105,7 @@
      
      <div class="socialmedia" >
       <a href="https://www.facebook.com/amit70512/"  ><i class="fab fa-facebook" style="font-size:48px;"> </i></a>
-      <a href=""><i class="fab fa-instagram"style="font-size:48px;"></i></a>
+      <a href="https://www.instagram.com/assemblylearning/"><i class="fab fa-instagram"style="font-size:48px;"></i></a>
       <a href=""><i class="fab fa-twitter" style="font-size:48px;"></i></a>
       
     </div>
